@@ -47,6 +47,9 @@ this release.
 - Using no highlight or limited syntax highlight in large buffers now also disable
   soft wrap (Matthieu Casanova)
 
+- Using no highlight or limited syntax highlight in large buffers now disable highlight
+  of very long lines (Matthieu Casanova)
+
 - Latex Indentation a nuisance (# 3432974)
 
 - Made it possible to disable automatic indentation by buffer or by edit
